gst/videomixer/videomixer2.c
@@ -1703,10 +1703,11 @@ gst_videomixer2_sink_event (GstCollectPads * pads, GstCollectData * cdata,
       break;
     }
     case GST_EVENT_SEGMENT:{
-      GstSegment seg;
-      gst_event_copy_segment (event, &seg);
+      gst_event_copy_segment (event, &mix->segment);
 
-      g_assert (seg.format == GST_FORMAT_TIME);
+      mix->newseg_pending = TRUE;
+
+      g_assert (mix->segment.format == GST_FORMAT_TIME);
       break;
     }
     case GST_EVENT_FLUSH_STOP:
